--- a/README
+++ b/README
@@ -17,5 +17,5 @@ It's mean YOU ARE FREE:
 
 Идеи и пожелания приветсвуются ;)
 
-Script author peko [peko@gasubasu.com]
+Scripts author peko [peko@gasubasu.com]
 http://gasubasu.com
