--- a/README
+++ b/README
@@ -1,12 +1,18 @@
-﻿All this scripts under Creative Common license (CC BY-SA) 
+﻿ENG
+
+All this scripts under Creative Common license (CC BY-SA) 
 http://creativecommons.org/licenses/by-sa/2.0/
 It's mean YOU ARE FREE:
    to share — to copy, distribute and transmit the work, 
    to remix — to adapt the work
    to make commercial use of the work
 
+BY: peko [peko@gasubasu.com]
+http://gasubasu.com
 
-Все представленные здесь скрипты под лицензией Creative Common license (CC BY-SA)
+RUS
+
+Все представленные здесь скрипты опубликованы под лицензией Creative Common (CC BY-SA)
 Это значит, что вы абсолютно свободны:
 	как угодно распространять код,
 	переделывать его под свои нужды, 
@@ -16,6 +22,4 @@ It's mean YOU ARE FREE:
 	Первоначальный автор будет упомянут (BY).
 
 Идеи и пожелания приветсвуются ;)
-
-Scripts author peko [peko@gasubasu.com]
-http://gasubasu.com
+Если что, пишите на peko@gasubasu.com
